:sparkles: Add countriesVisited
Add a section that renders the flags of the places and countries where I've been

Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/styles/aboutme.scss
+++ b/src/app/styles/aboutme.scss
@@ -225,6 +225,17 @@ strong {
 	margin-bottom: 1em;
 }
 
+.profile {
+	padding-top: 1.5em;
+}
+
+.country {
+	font-size: 2.25em;
+	font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
+	margin: 0 .15em;
+	cursor: pointer;
+}
+
 footer {
 	color: $text;
 	background-color: $sectionHighlight;
