--- a/src/app/templates/_includes/_sections/_profile.pug
+++ b/src/app/templates/_includes/_sections/_profile.pug
@@ -26,8 +26,9 @@ section.aboutme
 					a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'LinkedIn');", href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
 						svg.icon.icon-linkedin
 							use(xlink:href="#icon-linkedin")
-			.col-xs-12.col-md-8
-				p Hello!
-				| My name is #[strong Carlos Cuesta] I'm a #{me.age} years old #[strong Front End Developer] based in Barcelona. I describe myself as a developer who loves coding, open source, and the web platform. Currently I'm working at a company called #{me.company}, as a #{me.job}.
-				p In my spare time I like to #[strong create] and #[strong contribute] to #[strong open source] projects. That helps me to learn a lots of new stuff, grow as a developer and support other open source projects.
+			.col-xs-12.col-md-8.profile
+				h5 Hello!
+				p My name is #[strong Carlos Cuesta] I'm a #{me.age} years old #[strong Front End Developer] based in Barcelona. I describe myself as a developer who loves coding, open source, and the web platform. Currently I'm working at a company called #{me.company}, as a #{me.job}.
+				p In my spare time I like to #[strong create] and #[strong contribute] to #[strong open source] projects. That helps me to learn a lots of new stuff, grow as a developer and support other open source projects. I love travelling and discovering new places.
 				p Also, I enjoy writing at my #[a(href="https://carloscuesta.me/blog") blog] and going to developer meetups and conferences around Barcelona.
+				include _countriesVisited.pug
