:bug: Fix hover tag effect
Add ::before instead of :before.

Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -464,7 +464,7 @@
 	}
 
 	&-tag {
-		&:hover:before {
+		&:hover::before {
 			visibility: visible;
 			-webkit-transform: scaleX(1);
 			transform: scaleX(1);
