--- a/src/app/templates/_includes/_sections/_twitter.pug
+++ b/src/app/templates/_includes/_sections/_twitter.pug
@@ -26,7 +26,7 @@ section.twitter
 								svg.icon.icon-heart
 									use(xlink:href="#icon-heart")
 								span.likes=tweet.favorite_count
-		.more-btn
+		//-.more-btn
 			a.btn.btn-blue.btn-social(href='https://twitter.com/intent/follow?screen_name='+social.twitter, onmousedown="ga('send', 'event', 'Social', 'Follow Twitter');", target="_blank")
 				svg.icon.icon-twitter
 						use(xlink:href="#icon-twitter")
