--- a/src/app/templates/views/index.pug
+++ b/src/app/templates/views/index.pug
@@ -2,8 +2,8 @@ doctype html
 html
 	head
 		title #{site.title}
-		//-link(rel="stylesheet", type="text/css", href="/style.css")
-		style
+		link(rel="stylesheet", type="text/css", href="/style.css")
+		//-style
 			include ../../static/css/style.css
 		include ../_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me")
