--- a/src/app/templates/_includes/_footer.pug
+++ b/src/app/templates/_includes/_footer.pug
@@ -8,7 +8,7 @@ footer
                         a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
                             |Home
                     li.item
-                        a(href='https://carloscuesta.me/aboutme', onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
+                        a(href='https://carloscuesta.me/about', onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
                             |About Me
                     li.item
                         a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
@@ -27,5 +27,3 @@ footer
                 a(href="https://es.linkedin.com/in/crloscuesta", target="_blank")
                     svg.icon.icon-linkedin
                         use(xlink:href="#icon-linkedin")
-script.
-    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttps://github.com/carloscuesta | https://twitter.com/crloscuesta | https://linkedin.com/in/crloscuesta', 'font-size:18px;font-family:Montserrat;color:#37474F;', 'font-size:18px;font-family:Montserrat;color:#FF5252;', 'font-size:18px;font-family:Montserrat;color:#37474F;', 'font-size:18px;color:#FF5252;font-family:Montserrat;font-weight:bold;','');
