--- a/src/app/templates/_includes/_sections/_experience.pug
+++ b/src/app/templates/_includes/_sections/_experience.pug
@@ -1,19 +1,20 @@
 section.experience
-    .wrap
-        h2.section-title Experience
-        h4.section-subtitle Jobs as a Front End developer.
-        each job in me.jobs
-            article.row
-                .col-xs-2.duration
-                    h2=job.position.dates.time
-                .col-xs-10.job-card
-                    .job
-                        h2.company-name=job.company.name
-                        .row.roles
-                            h4.cv-position-title=job.position.title
-                            .dates
-                                time.start(datetime=job.position.dates.start)=job.position.dates.start+' -'
-                                time.end(datetime=job.position.dates.finish)=job.position.dates.finish
-                        ul
-                            each task in job.position.tasks
-                                li=task
+	.wrap
+		h2.section-title Experience
+		h4.section-subtitle Jobs as a Front End developer.
+		each job in me.jobs
+			article.row
+				.col-xs-2.duration
+					if job.position.dates.time
+						h2=job.position.dates.time
+				.col-xs-10.job-card
+					.job
+						h2.company-name=job.company.name
+						.row.roles
+							h4.cv-position-title=job.position.title
+							.dates
+								time.start(datetime=job.position.dates.start)=job.position.dates.start+' -'
+								time.end(datetime=job.position.dates.finish)=job.position.dates.finish
+						ul
+							each task in job.position.tasks
+								li=task
