--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -2,8 +2,8 @@ doctype html
 html
 	head
 		title Carlos Cuesta | About Me | Front End Developer
-		link(rel="stylesheet", type="text/css", href="/aboutme.css")
-		//-style
+		//-link(rel="stylesheet", type="text/css", href="/aboutme.css")
+		style
 			include ../../static/css/aboutme.css
 		include ../_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me/aboutme")
@@ -18,7 +18,6 @@ html
 				h1
 					span.about About
 					span.my-name=' '+me.name
-				h2.position-title=me.job
 		main
 			include ../_includes/_sections/_profile.pug
 			include ../_includes/_sections/_experience.pug
