:bug: Fix 404 urls
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/templates/_includes/_sections/_aboutme.pug
+++ b/src/app/templates/_includes/_sections/_aboutme.pug
@@ -5,7 +5,7 @@ section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
                 h1.name(itemprop="name")=me.name
                 p.bio(itemprop="description")!=me.aboutme
                 .getintouch
-                    a.btn.btn-red(href="/aboutme") About Me
+                    a.btn.btn-red(href="/about") About Me
                     .social
                         a(itemprop="sameAs", onmousedown="ga('send', 'event', 'Social Icons', 'GitHub');", href='https://twitter.com/'+social.twitter, target="_blank")
                             svg.icon.icon-twitter
