--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -6,9 +6,9 @@ html
 		style
 			include ../../static/css/aboutme.css
 		include ../_includes/_head.pug
-		link(rel="canonical", href="https://carloscuesta.me/aboutme")
-		meta(name="og:url", content="https://carloscuesta.me/aboutme")
-		meta(name="twitter:url", content="https://carloscuesta.me/aboutme")
+		link(rel="canonical", href="https://carloscuesta.me/about")
+		meta(name="og:url", content="https://carloscuesta.me/about")
+		meta(name="twitter:url", content="https://carloscuesta.me/about")
 
 	body
 		include ../_includes/_nav.pug
