:lipstick: Add  var
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -24,3 +24,5 @@ $personal: #FF4081;
 $life: #4CAF50;
 $stars: #FFD600;
 $web: #64B5F6;
+
+$systemFonts: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
