--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -33,7 +33,7 @@
 }
 
 .btn {
-	font-family: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	font-family: $systemFonts;
 	font-weight: 400;
 	padding: .45em 1em;
 	border-radius: 50px;
