:zap: Cleanup disqus
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/blog/content/themes/carloscuesta/default.hbs
+++ b/src/blog/content/themes/carloscuesta/default.hbs
@@ -100,7 +100,7 @@
 
     {{ghost_foot}}
 
-	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.carloscuesta.me/js/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');var disqus_shortname = 'carloscuesta';(function () {var s = document.createElement('script'); s.async = true;s.type = 'text/javascript';s.src = 'https://' + disqus_shortname + '.disqus.com/count.js';(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);}());
+	<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.carloscuesta.me/js/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
 	</script>
 
     <script type="text/javascript" src="{{asset "js/prism.js"}}"></script>
