:bug: Update Disqus vars
Signed-off-by: Carlos Cuesta <carloscuesta@me.com>

--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -39,8 +39,8 @@
 		<div itemprop="comment" id="disqus_thread" class="disqus-comments col-xs-12"></div>
 		<script>
 		var disqus_config = function () {
-		    this.page.url = {{id}};
-		    this.page.identifier = '{{url absolute="true"}}';
+		    this.page.url = '{{url absolute="true"}}';
+		    this.page.identifier = {{id}};
 		};
 		(function() {
 		var d = document, s = d.createElement('script');
