--- a/src/app/templates/_includes/_sections/_github.pug
+++ b/src/app/templates/_includes/_sections/_github.pug
@@ -1,29 +1,26 @@
 section.github
     .wrap
         h2.section-title GitHub
-        h4.section-subtitle The most popular projects of my github.
+        h4.section-subtitle The most popular projects of my repo.
         .row.around-xs
-            each github in githubData.items
+            each repo in githubData
                 article.col-xs-12.col-sm-6.col-md-4.github-repo
-                    div(class='repo language-'+github.language)
+                    div(class='repo language-'+repo.language)
                         .repo-title
-                            a(href=github.html_url, onmousedown="ga('send', 'event', 'GitHub', '#{github.name}');", target="_blank")
-                                h4 #{github.name}
-                            if github.homepage
-                                a.web(href=github.homepage, target="_blank", onmousedown="ga('send', 'event', 'GitHub Page', '#{github.name}');")
+                            a(href=repo.url, onmousedown="ga('send', 'event', 'GitHub', '#{repo.name}');", target="_blank")
+                                h4 #{repo.name}
+                            if repo.homepage
+                                a.web(href=repo.homepage, target="_blank", onmousedown="ga('send', 'event', 'GitHub Page', '#{repo.name}');")
                                     svg.icon.icon-globe
                                         use(xlink:href="#icon-globe")
                         .repo-stats
-                            a.starred(href=github.html_url)
+                            a.starred(href=repo.url)
                                 svg.icon.icon-star
                                     use(xlink:href="#icon-star")
-                            span.stars=github.stargazers_count
-                            if github.forks
-                                a.forked(href=github.html_url+'/fork')
+                            span.stars=repo.stars
+                            if repo.forks
+                                a.forked(href=repo.url+'/fork')
                                     svg.icon.icon-fork
                                         use(xlink:href="#icon-fork")
-                                    span.forks=github.forks
-                        .repo-description=github.description
-            //-a.btn.btn-blue.btn-social(href='https://github.com/'+social.github, onmousedown="ga('send', 'event', 'Social', 'Follow GitHub');", target="_blank")
-                svg.icon.icon-github
-                        use(xlink:href="#icon-github")
+                                    span.forks=repo.forks
+                        .repo-description=repo.description
