--- a/src/app/templates/_includes/_sections/_blog.pug
+++ b/src/app/templates/_includes/_sections/_blog.pug
@@ -3,7 +3,7 @@ section.blog
         h2.section-title Blog
         h4.section-subtitle The latests posts of my blog.
         .row.around-xs
-            each post in ghostData.posts
+            each post in ghostData
                 .col-xs-12.col-sm-6.col-md-5.post-wrap
                     article.post
                         img.post-image(src=post.image)
@@ -12,11 +12,11 @@ section.blog
                                 h2.post-title
                                     a(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', '#{post.title}');", target="_blank")=post.title
                             .post-info
-                                time(datetime=post.published_at)=post.published_at
+                                time(datetime=post.published_at)=post.publishedAt
                                 span.post-tags
                                     each tag in post.tags
                                         a(class='post-tag '+tag.name, href='/blog/tag/'+tag.name, onmousedown="ga('send', 'event', 'Post', 'Click' ,'tag-#{tag.name}');", target="_blank")='#'+tag.name
-                            p.post-excerpt=post.html
+                            p.post-excerpt=post.excerpt
                         footer.post-footer
                             a.read-more(href='/blog'+post.url, onmousedown="ga('send', 'event', 'Post', 'Click', 'Read More');", target="_blank") Read more
                                 svg.icon.icon-arrow
