:art: Restructure staticData

--- a/src/app/templates/_includes/_sections/_education.pug
+++ b/src/app/templates/_includes/_sections/_education.pug
@@ -5,15 +5,15 @@ section.experience
         each grade in me.education
             article.row
                 .col-xs-2.duration.grade-duration
-                    h2=grade.dates.time
+                    h2=grade.time
                 .col-xs-10.job-card
                     .job
                         h2.company-name=grade.title
                         .row.roles
                             h4.cv-position-title=grade.school
                             .dates
-                                time.start(datetime=grade.dates.start)=grade.dates.start+' - '
-                                time.end(datetime=grade.dates.finish)=grade.dates.finish
+                                time.start(datetime=grade.dateStart)=grade.dateStart+' - '
+                                time.end(datetime=grade.dateFinish)=grade.dateFinish
                         ul
                             each task in grade.tasks
                                 li=task
