--- a/src/app/templates/_includes/_sections/_experience.pug
+++ b/src/app/templates/_includes/_sections/_experience.pug
@@ -2,19 +2,19 @@ section.experience
 	.wrap
 		h2.section-title Experience
 		h4.section-subtitle Jobs as a Front End developer.
-		each job in me.jobs
+		each position in me.jobs
 			article.row
 				.col-xs-2.duration
-					if job.position.dates.time
-						h2=job.position.dates.time
+					if position.time
+						h2=position.time
 				.col-xs-10.job-card
 					.job
-						h2.company-name=job.company.name
+						h2.company-name=position.companyName
 						.row.roles
-							h4.cv-position-title=job.position.title
+							h4.cv-position-title=position.title
 							.dates
-								time.start(datetime=job.position.dates.start)=job.position.dates.start+' -'
-								time.end(datetime=job.position.dates.finish)=job.position.dates.finish
+								time.start(datetime=position.dateStart)=position.dateStart+' -'
+								time.end(datetime=position.dateFinish)=position.dateFinish
 						ul
-							each task in job.position.tasks
+							each task in position.tasks
 								li=task
