:truck: Rename static to public

--- a/src/app/templates/views/aboutme.pug
+++ b/src/app/templates/views/aboutme.pug
@@ -4,7 +4,7 @@ html
 		title Carlos Cuesta | About Me | Front End Developer
 		//-link(rel="stylesheet", type="text/css", href="/aboutme.css")
 		style
-			include ../../static/css/aboutme.css
+			include ../../public/css/aboutme.css
 		include ../_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me/about")
 		meta(name="og:url", content="https://carloscuesta.me/about")
