--- a/src/app/templates/views/errors/404.pug
+++ b/src/app/templates/views/errors/404.pug
@@ -23,7 +23,7 @@ html
 		meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
 		meta(name='theme-color', content='#FF5252')
 		style
-			include ../../../static/css/error.css
+			include ../../../public/css/error.css
 	body
 		.container
 			.row.message.middle-xs
