--- a/src/app/templates/views/index.pug
+++ b/src/app/templates/views/index.pug
@@ -4,7 +4,7 @@ html
 		title #{site.title}
 		//-link(rel="stylesheet", type="text/css", href="/style.css")
 		style
-			include ../../static/css/style.css
+			include ../../public/css/style.css
 		include ../_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me")
 		meta(name="og:url", content="https://carloscuesta.me")
