--- a/src/app/views/index.pug
+++ b/src/app/views/index.pug
@@ -4,20 +4,20 @@ html
 		title #{site.title}
 		//-link(rel="stylesheet", type="text/css", href="/style.css")
 		style
-			include ../../public/css/style.css
-		include ../_includes/_head.pug
+			include ../public/css/style.css
+		include ./_includes/_head.pug
 		link(rel="canonical", href="https://carloscuesta.me")
 		meta(name="og:url", content="https://carloscuesta.me")
 		meta(name="twitter:url", content="https://carloscuesta.me")
 
 	body
-		include ../_includes/_icons.pug
-		include ../_includes/_header.pug
+		include ./_includes/_icons.pug
+		include ./_includes/_header.pug
 		main
-			include ../_includes/_sections/_aboutme.pug
-			include ../_includes/_sections/_github.pug
-			include ../_includes/_sections/_twitter.pug
-			include ../_includes/_sections/_blog.pug
-			include ../_includes/_footer.pug
+			include ./_includes/_sections/_aboutme.pug
+			include ./_includes/_sections/_github.pug
+			include ./_includes/_sections/_twitter.pug
+			include ./_includes/_sections/_blog.pug
+			include ./_includes/_footer.pug
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
