:hammer: Improve views code reusability

--- a/src/app/views/errors/500.pug
+++ b/src/app/views/errors/500.pug
@@ -2,28 +2,8 @@ doctype html
 html
 	head
 		title Carlos Cuesta | Error 500
-		meta(charset="utf-8")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="description", content="Error 500 Internal Server Error - Carlos Cuesta")
-		link(rel="apple-touch-icon", sizes="57x57", href="apple-icon-57x57.png")
-		link(rel="apple-touch-icon", sizes="60x60", href="apple-icon-60x60.png")
-		link(rel="apple-touch-icon", sizes="72x72", href="apple-icon-72x72.png")
-		link(rel="apple-touch-icon", sizes="76x76", href="apple-icon-76x76.png")
-		link(rel="apple-touch-icon", sizes="114x114", href="apple-icon-114x114.png")
-		link(rel="apple-touch-icon", sizes="120x120", href="apple-icon-120x120.png")
-		link(rel="apple-touch-icon", sizes="144x144", href="apple-icon-144x144.png")
-		link(rel="apple-touch-icon", sizes="152x152", href="apple-icon-152x152.png")
-		link(rel="apple-touch-icon", sizes="180x180", href="apple-icon-180x180.png")
-		link(rel='icon', type='image/png', sizes='192x192', href='android-icon-192x192.png')
-		link(rel='icon', type='image/png', sizes='32x32', href='favicon-32x32.png')
-		link(rel='icon', type='image/png', sizes='96x96', href='favicon-96x96.png')
-		link(rel='icon', type='image/png', sizes='16x16', href='favicon-16x16.png')
-		link(rel='manifest', href='manifest.json')
-		meta(name='msapplication-TileColor', content='#FF5252')
-		meta(name='msapplication-TileImage', content='ms-icon-144x144.png')
-		meta(name='theme-color', content='#FF5252')
-		style
-			include ../../public/css/error.css
+		include ./_head.pug
 	body
 		.container
 			.row.message.middle-xs
@@ -31,12 +11,7 @@ html
 					h1 Oops! There's an error
 					h2 #{error}
 					h3 Please try again. Here are some helpful links instead:
-					nav
-						ul
-							li #[a(href="http://carloscuesta.me", onmousedown="ga('send', 'event', '404','Click', 'Link Home');") Home]
-							li #[a(href="http://carloscuesta.me/about", onmousedown="ga('send', 'event', '404','Click', 'Link Blog');") About me]
-							li #[a(href="http://carloscuesta.me/blog", onmousedown="ga('send', 'event', '404','Click', 'Link Blog');") Blog]
-							li #[a(href="http://carloscuesta.me/sitemap.xml", onmousedown="ga('send', 'event', '404','Click', 'Link Sitemap');") Sitemap]
+					include ./_nav.pug
 					h4 Error Code:
 						span.status-code 500
 					div.btn-return
