--- a/src/app/views/index.pug
+++ b/src/app/views/index.pug
@@ -19,5 +19,4 @@ html
 			include ./_includes/_sections/_twitter.pug
 			include ./_includes/_sections/_blog.pug
 			include ./_includes/_footer.pug
-		script.
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
+		include ./_includes/_analytics.pug
