--- a/src/app/views/index.pug
+++ b/src/app/views/index.pug
@@ -1,22 +1,26 @@
+- var isDevelopment = process.env.NODE_ENV === 'development'
 doctype html
 html
-	head
-		title #{site.title}
-		//-link(rel="stylesheet", type="text/css", href="/style.css")
-		style
-			include ../public/css/style.css
-		include ./_includes/_head.pug
-		link(rel="canonical", href="https://carloscuesta.me")
-		meta(name="og:url", content="https://carloscuesta.me")
-		meta(name="twitter:url", content="https://carloscuesta.me")
+  head
+    title #{site.title}
+    if isDevelopment
+      link(rel="stylesheet", type="text/css", href="/style.css")
+    else
+      style
+        include ../public/css/style.css
+    include ./_includes/_head.pug
+    link(rel="canonical", href="https://carloscuesta.me")
+    meta(name="og:url", content="https://carloscuesta.me")
+    meta(name="twitter:url", content="https://carloscuesta.me")
 
-	body
-		include ./_includes/_icons.pug
-		include ./_includes/_header.pug
-		main
-			include ./_includes/_sections/_aboutme.pug
-			include ./_includes/_sections/_github.pug
-			include ./_includes/_sections/_twitter.pug
-			include ./_includes/_sections/_blog.pug
-			include ./_includes/_footer.pug
-		include ./_includes/_analytics.pug
+  body
+    include ./_includes/_icons.pug
+    include ./_includes/_header.pug
+    main
+      include ./_includes/_sections/_aboutme.pug
+      include ./_includes/_sections/_github.pug
+      include ./_includes/_sections/_twitter.pug
+      include ./_includes/_sections/_blog.pug
+      include ./_includes/_footer.pug
+  if !isDevelopment
+    include ./_includes/_analytics.pug
