--- a/src/app/views/_includes/_nav.pug
+++ b/src/app/views/_includes/_nav.pug
@@ -11,8 +11,8 @@ nav.nav.row.middle-xs
                     a(href=baseUrl, onmousedown="ga('send', 'event', 'Menu', 'Home');")
                         |Home
                 li.item
-                    a(href='#{baseUrl}/about', onmousedown="ga('send', 'event', 'Menu', 'About Me');")
+                    a(href=`${baseUrl}/about`, onmousedown="ga('send', 'event', 'Menu', 'About Me');")
                         |About Me
                 li.item
-                    a(href='#{baseUrl}/blog', onmousedown="ga('send', 'event', 'Menu', 'Blog');")
+                    a(href=`${baseUrl}/blog`, onmousedown="ga('send', 'event', 'Menu', 'Blog');")
                         |Blog
