--- a/src/app/views/errors/500.pug
+++ b/src/app/views/errors/500.pug
@@ -18,4 +18,4 @@ html
 						a(href="mailto:hi@carloscuesta.me?Subject=Error @ carloscuesta.me - #{error}", onmousedown="ga('send', 'event', '500','Click', 'Contact');").btn.btn-raised Contact site administrator
 						a(href="https://carloscuesta.me", onmousedown="ga('send', 'event', '500','Click', 'Return Button');").btn.btn-blue Return to carloscuesta
 		script.
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');ga('send', 'event', 'Error', '500', '#{error}');
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');ga('send', 'event', 'Error', '500');
