✨ Add NODE_ENV to views (#53)
* :sparkles: Detect NODE_ENV

* fixup! :sparkles: Detect NODE_ENV

* :sparkles: Unload analytics if isDevelopment

* :art: Spaces indentation

* :bug: Fix events interpolation

* :truck: Move data inside of routes

--- a/src/app/views/_includes/_footer.pug
+++ b/src/app/views/_includes/_footer.pug
@@ -1,3 +1,5 @@
+- var isDevelopment = process.env.NODE_ENV === 'development'
+- var baseUrl = isDevelopment ? 'http://localhost:5000' : 'https://carloscuesta.me'
 footer
     .wrap
         .row.middle-xs
@@ -5,13 +7,13 @@ footer
                 h3 #{me.name}
                 ul.footer-navigation
                     li.item
-                        a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
+                        a(href=baseUrl, onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
                             |Home
                     li.item
-                        a(href='https://carloscuesta.me/about', onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
+                        a(href=`${baseUrl}/about`, onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
                             |About Me
                     li.item
-                        a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
+                        a(href=`${baseUrl}/blog`, onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
                             |Blog
                     li.item
                         a(href='mailto:'+me.mail, onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
