--- a/src/app/styles/_partials/_vars.scss
+++ b/src/app/styles/_partials/_vars.scss
@@ -24,5 +24,6 @@ $personal: #FF4081;
 $life: #4CAF50;
 $stars: #FFD600;
 $web: #64B5F6;
+$react: #00D8FF;
 
 $systemFonts: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
