--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -4,14 +4,14 @@
 /* GENERAL */
 
 html, body {
-	margin: 0;
-    padding: 0;
-    text-rendering: optimizeLegibility;
-    font-family: 'Montserrat','helvetica';
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 300;
-	overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  text-rendering: optimizeLegibility;
+  font-family: 'Avenir', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 300;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -178,7 +178,7 @@ header {
 }
 
 .btn {
-	font-family: 'Montserrat';
+	font-family: 'Avenir', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 	font-weight: 400;
 	padding: .45em 1em;
 	border-radius: 50px;
