--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -25,12 +25,12 @@ h2 {
 
 h3 {
     font-size: 1.5em;
-    font-weight: 300;
+    font-weight: 700;
 }
 
 h4 {
     font-size: 1.25em;
-    font-weight: 400;
+    font-weight: 300;
 }
 
 h5 {
@@ -111,6 +111,9 @@ a:hover {
 }
 
 .post-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 	padding: 0;
 	border-radius: 2px;
 	margin: 2.75em 0;
@@ -252,6 +255,7 @@ header {
 
 .post-title a {
 	color: #37474F;
+  font-weight: 700;
 }
 
 .post-title a:hover {
