:lipstick: Update post title color

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -281,8 +281,8 @@ article .read-more {
 .post-title {
 	font-size: 2em;
 	font-weight: 400;
-	color: #37474F;
-    margin-top: 0;
+	color: #000000;
+  margin-top: 0;
 }
 
 .post-excerpt {
