:lipstick: Add language-shell as a color

--- a/src/styles/_partials/_vars.scss
+++ b/src/styles/_partials/_vars.scss
@@ -17,6 +17,7 @@ $links: #1785F8;
 $html: #FF5722;
 $css: #42A5F5;
 $javascript: #FBDD51;
+$shell: #89E051;
 $nodejs: #00E676;
 $npm: #E53935;
 $tools: #3367D6;
