:lipstick: Update tags and languages colors

--- a/src/styles/_partials/_vars.scss
+++ b/src/styles/_partials/_vars.scss
@@ -15,16 +15,16 @@ $links: #1785F8;
 /* LANGUAGES, TAGS AND ICONS */
 
 $html: #FF5722;
-$css: #42A5F5;
+$css: #AB47BC;
 $javascript: #FBDD51;
 $shell: #89E051;
 $nodejs: #00E676;
 $npm: #E53935;
 $tools: #3367D6;
-$personal: #FF4081;
-$life: #4CAF50;
+$personal: #263238;
 $stars: #FFD600;
 $web: #64B5F6;
 $react: #00D8FF;
+$conferences: #FF4081;
 
 $systemFonts: Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
